--- a/CSS/responsive.scss
+++ b/CSS/responsive.scss
@@ -21,7 +21,7 @@
                 visibility: visible;
                 position: absolute;
                 z-index: 1000;
-                top: 51px;
+                top: -16px;
                 left: 0;
                 background: #918F89;
                 color: #FFF;
@@ -29,7 +29,7 @@
                 transition: all 0.1s;
                 width: 100%;
                 background-size: cover;
-                height: 22vh;
+                height: 100vh;
                 opacity: 0.9;
             }
         }
@@ -40,8 +40,8 @@
             width: 80px;
             background: #918F89;
             position: absolute;
-            top: 0;
-            right: 0;
+            top: 5px;
+            right: 10px;
             z-index: 2;
             color: #FFF;
 
@@ -63,21 +63,34 @@
             }
 
             &.active div:nth-of-type(1) {
-                transform: rotate(45deg)translate(-50%, 0px);
-                transform-origin: 0% 50%;
+                -webkit-transform: translateY(20px) rotate(-315deg);
+                transform: translateY(-7px) rotate(-360deg);
+                background: #9d3bb0;
+                font-size: 27px;
+                font-size: small;
+                /* width: 46px; */
+                height: 7px;
             }
 
             &.active div:nth-of-type(3) {
-                transform: rotate(-45deg)translate(-50%, 0px);
-                transform-origin: 0% 50%;
+                background: #a707c1;
+                -webkit-transform: translateY(-20px) rotate(315deg);
+                transform: translateY(-8px) rotate(269deg);
+                height: 7px;
             }
 
             div:nth-of-type(1) {
                 transform: translate(-50%, -15px);
+                height: 4px;
+            }
+
+            div:nth-of-type(2) {
+                height: 4px;
             }
 
             div:nth-of-type(3) {
                 transform: translate(-50%, 15px);
+                height: 4px;
             }
         }
 
@@ -89,6 +102,7 @@
                 position: static;
                 width: 100%;
                 text-align: center;
+                padding-top: 48px;
 
                 li {
                     width: 100%;
@@ -270,6 +284,7 @@
             position: relative;
             overflow: hidden;
             width: 387px;
+            margin: 0 auto;
         }
 
         figcaption {
